<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:visibility="visible"
    tools:context=".GameCentreActivity.RegisterActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="70dp"
        android:text="@string/game_csc207"
        android:textAllCaps="false"
        android:textColor="@color/cardview_light_background"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="20dp"
        android:allowUndo="true"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/passwords"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/SignUp"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/userName"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/toLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="40dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp"
        android:onClick="onclickToLogin"/>

    <Button
        android:id="@+id/SignUp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/cardview_light_background"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onclickRegisterButton"/>

    <ImageView
        android:id="@+id/userNameIcon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="85dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:srcCompat="@drawable/username" />

    <ImageView
        android:id="@+id/passwordIcon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/error_incorrect_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameIcon"
        app:srcCompat="@drawable/password" />

    <ImageView
        android:id="@+id/regLogo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cards" />

</android.support.constraint.ConstraintLayout>